--- a/css/register.css
+++ b/css/register.css
@@ -1,11 +1,11 @@
 .user_card{
-	height: 400px;
+	height: 450px;
 	width: 350px;
 	margin-top: auto;
 	margin-bottom: auto;
 	background: white;
 	position: relative;
-	/* display: flex; */
+	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	padding: 10px;
@@ -53,6 +53,7 @@
 	box-shadow: none !important;
 	outline: 0px !important;
 }
+
 .login_container{
 	padding: 0 2rem;
 }
@@ -66,4 +67,9 @@
 .input_pass:focus{
 	box-shadow: none !important;
 	outline: 0px !important;
+}
+
+#span{  
+  color: red;
+  font-size: 1.2em;
 }
