--- a/css/bootstrapA.css
+++ b/css/bootstrapA.css
@@ -4299,7 +4299,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #007bff;
+  background-color: #56187F;
 }
 
 .nav-fill .nav-item {
